--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
-
-
 <html lang="en-us">
-
 <head>
   <meta charset="UTF-8">
-  <title>My First Page</title>
+  <title>My Bio</title>
 </head>
-
 <body>
   <!-- Headline -->
-  <h1>Hello World!</h1>
+  <h1>Data Scientist, Visualizations and Business Analysis Guru</h1>
   <!-- Image -->
   <img src="http://en.spongepedia.org/images/thumb/3/33/Spongebob!!!.jpg/180px-Spongebob!!!.jpg" alt="Spongebob!" />
   <br>
