--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <head>
   <meta charset="UTF-8">
   <title>My Bio</title>
+  <h1>
+      My home page
+  </h1>
+</html>
 </head>
 <body>
   <!-- Headline -->
