--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <meta charset="UTF-8">
   <title>My Bio</title>
   <h1>
-      My home page
+      My Bio
   </h1>
 </html>
 </head>
 <body>
   <!-- Headline -->
-  <h1>Data Scientist, Visualizations and Business Analysis Guru</h1>
+  <h2>Data Scientist, Visualizations and Business Analysis Guru</h2>
   <!-- Image -->
   <img src="http://en.spongepedia.org/images/thumb/3/33/Spongebob!!!.jpg/180px-Spongebob!!!.jpg" alt="Spongebob!" />
   <br>
