--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <h2>Data Scientist, Visualizations and Business Analysis Guru</h2>
   <!-- Image -->
   <img src="http://en.spongepedia.org/images/thumb/3/33/Spongebob!!!.jpg/180px-Spongebob!!!.jpg" alt="Spongebob!" />
+  <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Rutgers_University_with_the_state_university_logo.svg" alt="Rutgers" />
   <br>
 
   <!-- Link with New Tab -->
