--- a/index.html
+++ b/index.html
@@ -10,13 +10,10 @@
 <body>
   <!-- Headline -->
   <h2>Data Scientist, Visualizations and Business Analysis Guru</h2>
-  <!-- Image -->
-  <img src="http://en.spongepedia.org/images/thumb/3/33/Spongebob!!!.jpg/180px-Spongebob!!!.jpg" alt="Spongebob!" />
   <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Rutgers_University_with_the_state_university_logo.svg" alt="Rutgers" />
   <br>
-
   <!-- Link with New Tab -->
-  <a href="https://www.google.com" target="_blank">Opens new tab</a>
+  <a href="https://www.linkedin.com/in/olgaroginkin/" target="_blank">Opens new tab</a>
   <br>
 
   <!-- Bold Link -->
