--- a/index.html
+++ b/index.html
@@ -10,59 +10,22 @@
 <body>
   <!-- Headline -->
   <h2>Data Scientist, Visualizations and Business Analysis Guru</h2>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Rutgers_University_with_the_state_university_logo.svg" alt="Rutgers" />
+  <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Rutgers_University_with_the_state_university_logo.svg" alt="Rutgers" height="100" width="100" />
   <br>
   <!-- Link with New Tab -->
-  <a href="https://www.linkedin.com/in/olgaroginkin/" target="_blank">Opens new tab</a>
-  <br>
+  <a href="https://www.linkedin.com/in/olgaroginkin/" target="_blank">Here is a link to my Linkedin page --></a>
+  <h2></h2>
 
-  <!-- Bold Link -->
-  <strong><a href="https://www.youtube.com">This is a bold link</a></strong>
-  <br>
+<b>Experienced Product Project Manager and Business Analyst, with over 15 years of experience in Banking, Insurance and Real Estate sectors. Demonstrated experience in a variety of data analysis technologies. 
+  Passionate about discovering hidden trends, using data to observe and deliver innovative and insightful analytical decisions. Adept at providing client facing analysis of data through interactive visualizations and strong business intelligence dashboarding. 
+  Software development background, Business Analysis background, PMP Certification, Data Science Bootcamp (Rutgers University) Graduate
+</b>
+<h2></h2>
+<br>
 
-  <!-- Placeholder link -->
-  <a href="#">This is placeholder link goes nowhere, for now</a>
-  <br>
-  <br>
-  <hr>
-  <h2>Bonus</h2>
 
-  <!-- Ordered List (numbered 1 to 4) -->
-  <h3>Ordered list</h3>
-  <ol>
-    <li>Get Bread</li>
-    <li>Get PB and J </li>
-    <li>Smother PB and J on said Bread</li>
-    <li>Eat</li>
-  </ol>
-
-  <!-- Unordered List (bullet pointed) -->
-  <h3>Unordered list</h3>
-  <ul>
-    <li>Britney Spears</li>
-    <li>Rihanna</li>
-    <li>Spice Girls</li>
-    <li>Christina</li>
-    <li>Rage Against the Machine</li>
-  </ul>
-
-  <!-- Nesting anchor elements inside of li elements -->
-  <h3>Links are commonly separated inside of unordered lists inside navigation bars</h3>
-  <ul>
-    <li><a href="https://www.youtube.com">Youtube</a></li>
-    <li><a href="https://www.twitter.com">Twitter</a></li>
-    <li><a href="https://www.linkedin.com">LinkedIn</a></li>
-    <li><a href="https://www.github.com">Github</a></li>
-    <li><a href="https://www.stackoverflow.com">StackOverflow</a></li>
-  </ul>
-
-  <h3>Youtube</h3>
-
-  <!-- iframe element -->
-  <iframe width="640" height="390" src="https://www.youtube.com/embed/M7lc1UVf-VE?autoplay=1&origin=http://example.com"></iframe>
 
 </body>
 
 </html>
-
 
